--- a/service-details.html
+++ b/service-details.html
@@ -80,7 +80,7 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
 
             <div class="service-box">
-              <h4>Serices List</h4>
+              <h4>Services List</h4>
               <div class="services-list">
                 <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
                 <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
@@ -136,7 +136,7 @@
 
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
-      <h3 class="sitename">Brandon Johnson</h3>
+      <h3 class="sitename">Arief Prasetyo Hadi</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -147,7 +147,7 @@
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Alex Smith</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <strong class="px-1 sitename">Arief Prasetyo Hadi</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
