--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -159,11 +159,11 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong> Web design</li>
-                <li><strong>Client</strong> ASU Company</li>
-                <li><strong>Project date</strong> 01 March, 2020</li>
+                <li><strong>Category</strong>Visualization</li>
+                <li><strong>Source</strong> Tableau</li>
+                <li><strong>Project date</strong> 05 January, 2024</li>
                 <li><strong>Project URL</strong> <a href="#">www.example.com</a></li>
-                <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li>
+                <li><a href="https://public.tableau.com/shared/4ZYZHPHFG?:display_count=n&:origin=viz_share_link" class="btn-visit align-self-start">Visit Website</a></li>
               </ul>
             </div>
           </div>
