--- a/portfolio-car sales.html
+++ b/portfolio-car sales.html
@@ -190,6 +190,7 @@
       <div class="container">
         <div class="copyright">
           <span>Copyright © </span> <strong class="px-1 sitename">Arief Prasetyo Hadi</strong> <span>All Rights Reserved</span>
+          <span>Copyright © </span> <strong class="px-1 sitename">Arief Prasetyo Hadi</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
