--- a/portfolio-car sales.html
+++ b/portfolio-car sales.html
@@ -63,10 +63,10 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Portfolio Details</li>
+            <li class="current">Business Analysis</li>
           </ol>
         </nav>
-        <h1>Portfolio Details</h1>
+        <h1>Car sales--EDA</h1>
       </div>
     </div><!-- End Page Title -->
 
@@ -159,10 +159,9 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>Visualization</li>
-                <li><strong>Source</strong> Tableau</li>
+                <li><strong>Category</strong>Business Analysis</li>
+                <li><strong>Source</strong> Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><strong>Project URL</strong> <a href="#">www.public.tableau.com</a></li>
                 <li><a href="https://public.tableau.com/shared/4ZYZHPHFG?:display_count=n&:origin=viz_share_link" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
@@ -189,7 +188,6 @@
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright © </span> <strong class="px-1 sitename">Arief Prasetyo Hadi</strong> <span>All Rights Reserved</span>
           <span>Copyright © </span> <strong class="px-1 sitename">Arief Prasetyo Hadi</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
