--- a/portfolio-retail sales.html
+++ b/portfolio-retail sales.html
@@ -63,10 +63,10 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Portfolio Details</li>
+            <li class="current">Visualization</li>
           </ol>
         </nav>
-        <h1>Portfolio Details</h1>
+        <h1>Retail sales--Looker Studio</h1>
       </div>
     </div><!-- End Page Title -->
 
@@ -98,19 +98,15 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/app-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/cofee shop1.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/product-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/Supermarket.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/branding-1.jpg" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/portfolio/books-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/Car sales.jpg" alt="">
             </div>
 
           </div>
@@ -162,7 +158,6 @@
                 <li><strong>Category</strong>Visualization</li>
                 <li><strong>Source</strong> Tableau</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><strong>Project URL</strong> <a href="#">www.public.tableau.com</a></li>
                 <li><a href="https://public.tableau.com/shared/4ZYZHPHFG?:display_count=n&:origin=viz_share_link" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
