--- a/portfolio-coffee shop.html
+++ b/portfolio-coffee shop.html
@@ -158,7 +158,7 @@
                 <li><strong>Category</strong>Business Analysis</li>
                 <li><strong>Source</strong>Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://public.tableau.com/shared/4ZYZHPHFG?:display_count=n&:origin=viz_share_link" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://github.com/ariefprasetyohadi/Dataset/blob/main/coffee_shop_sales1.ipynb" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
