--- a/portfolio-supermarket.html
+++ b/portfolio-supermarket.html
@@ -162,7 +162,7 @@
                 <li><strong>Category</strong>Business Analysis</li>
                 <li><strong>Source</strong>Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://github.com/ariefprasetyohadi/Supermarket-EDA/blob/main/Tugas%20Olah%20Data%20Penjualan.ipynb" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://github.com/ariefprasetyohadi/Supermarket-EDA/blob/main/Tugas%20Olah%20Data%20Penjualan-%20Arief%20Prasetyo%20Hadi.ipynb" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
