--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 <h4>Coffee Shop--EDA</h4>
                 <p>Lorem ipsum, dolor sit</p>
                 <a href="assets/img/masonry-portfolio/cofee shop1.jpg" title="Coffee Shop--EDA" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-coffee shop.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-coffee shop.html" title="More Details" class="arrow right"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
