--- a/portfolio-car sales.html
+++ b/portfolio-car sales.html
@@ -98,7 +98,7 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/coffee shop.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/cofee shop1.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
