--- a/index.html
+++ b/index.html
@@ -380,10 +380,10 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <img src="assets/img/masonry-portfolio/Hotel customer booking churn.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Hotel Boooking--ML</h4>
+                <h4>House Rent Prediction--ML</h4>
                 <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/Hotel customer booking churn.jpg" title="Hotel Boooking--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-hotel booking.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/masonry-portfolio/House Rent.jpg" title="House Rent Prediction--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-house rent.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
