--- a/portfolio-house rent.html
+++ b/portfolio-house rent.html
@@ -66,7 +66,7 @@
             <li class="current">Forecasting</li>
           </ol>
         </nav>
-        <h1>Hotel Boooking--ML</h1>
+        <h1>House Rent Prediction--ML</h1>
       </div>
     </div><!-- End Page Title -->
 
@@ -162,7 +162,7 @@
                 <li><strong>Category</strong>Forecasting</li>
                 <li><strong>Source</strong> Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://public.tableau.com/shared/4ZYZHPHFG?:display_count=n&:origin=viz_share_link" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://github.com/ariefprasetyohadi/Business-Analytics/blob/main/House_rent/house-rent-prediction-analysis-ml.ipynb" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
