--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 April 1993</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>ariefprasetyohadi.github.io</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://ariefprasetyohadi.github.io/">ariefprasetyohadi.github.io</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <span><a href="https://www.linkedin.com/in/arief-prasetyo-hadi-admfin/">arief-prasetyo-hadi-admfin</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bandung, Jawa Barat</span></li>
                 </ul>
               </div>
@@ -350,7 +350,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Here are some projects I have made using some of the tools. With various themes and please feel free to check out my projects.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -378,7 +378,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/masonry-portfolio/Hotel customer booking churn.jpg" class="img-fluid" alt="">
+              <img src="assets/img/masonry-portfolio/House Rent.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>House Rent Prediction--ML</h4>
                 <p>Lorem ipsum, dolor sit</p>
@@ -428,12 +428,12 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/masonry-portfolio/Car sales.jpg" class="img-fluid" alt="">
+              <img src="assets/img/masonry-portfolio/Car price.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Car sales--EDA</h4>
+                <h4>Car price--EDA</h4>
                 <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/Car sales.jpg" title="Car sales--EDA" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-car sales.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/masonry-portfolio/Car price.jpg" title="Car price--EDA" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-car price.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
