--- a/portfolio-car price.html
+++ b/portfolio-car price.html
@@ -66,7 +66,7 @@
             <li class="current">Business Analysis</li>
           </ol>
         </nav>
-        <h1>Car sales--EDA</h1>
+        <h1>Car price--EDA</h1>
       </div>
     </div><!-- End Page Title -->
 
@@ -98,15 +98,15 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
+              <img src="assets/img/masonry-portfolio/Car price.jpg" alt="">
+            </div>
+
+            <div class="swiper-slide">
               <img src="assets/img/masonry-portfolio/cofee shop1.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
               <img src="assets/img/masonry-portfolio/Supermarket.jpg" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Car sales.jpg" alt="">
             </div>
 
           </div>
