--- a/portfolio-coffee shop.html
+++ b/portfolio-coffee shop.html
@@ -106,7 +106,7 @@
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Car sales.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/Car price.jpg" alt="">
             </div>
 
           </div>
