--- a/portfolio-retail sales.html
+++ b/portfolio-retail sales.html
@@ -98,15 +98,15 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/cofee shop1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/Retail sales.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Supermarket.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/corona virus.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Car sales.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/Bike rent.jpg" alt="">
             </div>
 
           </div>
