--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/Aicon.png" rel="icon">
+  <link href="assets/img/Alogo.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -85,7 +85,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>I attended several data analyst training programs. I am a graduate of PROA DTS “Google Professional Data Analytics” and “Cisco PCAP (Programming Essentials in Python)”. I am currently learning about R and Python with a focus on Data Analytics and Data Science.</p>
+        <p>I am a data analyst and data scientist. Who started learning about data by myself through online platforms. I created this website to showcase my work related to data analysis, prediction and modeling.</p>
+
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -118,8 +119,7 @@
               </div>
             </div>
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+               I attended several data analyst training programs. I am a graduate of PROA DTS “Google Professional Data Analytics” and “Cisco PCAP (Programming Essentials in Python)”. I am currently learning about SQL, R and Python.
             </p>
           </div>
         </div>
@@ -269,7 +269,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Here is a timeline of my most recent to longest activity, i.e. education, training and professional career experience.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
