--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
               <img src="assets/img/masonry-portfolio/cofee shop1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Coffee Shop--EDA</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/cofee shop1.jpg" title="Coffee Shop--EDA" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-coffee shop.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -381,7 +381,7 @@
               <img src="assets/img/masonry-portfolio/House Rent.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>House Rent Prediction--ML</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/House Rent.jpg" title="House Rent Prediction--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-house rent.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -391,7 +391,7 @@
               <img src="assets/img/masonry-portfolio/Retail sales.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Retail sales--Looker Studio</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/Retail sales.jpg" title="Image Prediction, Game : Scissor, Papper & Rock" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-retail sales.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -401,7 +401,7 @@
               <img src="assets/img/masonry-portfolio/Supermarket.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Supermarket--EDA</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/Supermarket.jpg" title="Supermarket--EDA" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-supermarket.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -411,17 +411,17 @@
               <img src="assets/img/masonry-portfolio/Transportation churn.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Transportation Customer Churn--ML</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/Transportation churn.jpg" title="Transportation Customer Churn--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-transportation churn.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/masonry-portfolio/Bike rent.jpg.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Bike Rent--Tableau</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/Bike rent.jpg" title="Bike Rent--Tableau" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-bike rent.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -431,7 +431,7 @@
               <img src="assets/img/masonry-portfolio/Car price.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Car price--EDA</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/Car price.jpg" title="Car price--EDA" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-car price.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -441,7 +441,7 @@
               <img src="assets/img/masonry-portfolio/Air passanger satification.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Air Passenger Satisfication--ML</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/Air passanger satification.jpeg" title="Air Passenger Satisfication--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-air passanger.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -451,7 +451,7 @@
               <img src="assets/img/masonry-portfolio/corona virus.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Covid-19 spread in indonesia--Tableau</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/corona virus.jpg" title="Covid-19 spread in indonesia--Tableau" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-covid19.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -461,7 +461,7 @@
               <img src="assets/img/masonry-portfolio/scissors, papper and rock.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Image Prediction, Game : Scissor, Papper & Rock</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/scissors, papper and rock.jpg" title=">Image Prediction, Game : Scissor, Papper & Rock" data-gallery="portfolio-gallery-game" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-Image Prediction.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
