--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="assets/img/masonry-portfolio/Bike rent.jpg.jpg" class="img-fluid" alt="">
+              <img src="assets/img/masonry-portfolio/Bike rent.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Bike Rent--Tableau</h4>
                 <p>Please click the right button to show the project.</p>
