--- a/portfolio-bike rent.html
+++ b/portfolio-bike rent.html
@@ -9,8 +9,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/Aicon.png" rel="icon">
+  <link href="assets/img/Alogo.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -98,7 +98,7 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Bike Rent.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/Bike rent.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
